fix bugs in header and dark mode logic and styles

--- a/web/src/components/header/styles/checkbox.module.css
+++ b/web/src/components/header/styles/checkbox.module.css
@@ -48,15 +48,15 @@
     top: 2px;
     width: 10px;
     height: 20px;
-    border: 2px solid yellow;
-    background-color: black;
+    border: 2px solid var(--orange);
+    background-color: var(--blue);
     border-bottom-right-radius: 20px;
     border-top-right-radius: 20px;
 }
 
 .container input:checked ~ .checkmark:before {
-    border: 2px solid var(--red);
-    background-color: var(--green);
+    border: 2px solid black;
+    background-color: yellow;
 }
 
 .checkmark:after {
@@ -82,7 +82,6 @@
 }
 @media (max-width: 767px) {
     .container {
-        z-index: -1;
         margin: 2px
     }
 }
